<resources>
    <string name="app_name">Sonarcloud</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="enter_your_email">Please enter your email</string>
    <string name="sonar_cloud_logo">Sonar Cloud logo</string>
    <string name="select_pa_system">Select PA system</string>
    <string name="make_announcement">Make an announcement</string>
    <string name="schedule_announcement">Schedule an announcement</string>
    <string name="settings">Settings</string>
    <string name="login_error">Log-in error</string>
    <string name="unknown_error">Something went wrong, please try again</string>
    <string name="error">Error</string>
    <string name="loading">Connecting…</string>
    <string name="receivers">PAs</string>
    <string name="groups">Groups</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_group">Add new group</string>
    <string name="group_name">Group Name</string>
    <string name="phone_pin_number">Phone PIN Number</string>
    <string name="confirm_pin_number">Confirm PIN Number</string>
    <string name="pa_systems">PA Systems</string>
    <string name="new_group">New Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="enter_group_name">Please enter a group name</string>
    <string name="enter_pin">Please enter a 4 digits PIN</string>
    <string name="short_pin">PIN must contain 4 numbers</string>
    <string name="enter_valid_pin">Please specify a 4 digits PIN</string>
    <string name="does_not_match">PIN codes does not match</string>
    <string name="please_select_pa">Please select at least one PA System</string>
    <string name="save_error">Save Error</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="select_pa">Select PA System</string>
    <string name="group_saved">Group saved successfully</string>
    <string name="stream">Stream</string>
    <string name="record">Record</string>
    <string name="ptt">PTT</string>
    <string name="record_and_send">Record &amp; Send</string>
    <string name="tap_record_to_start">Tap record to start</string>
    <string name="all">All</string>
    <string name="scheduled">Scheduled</string>
    <string name="start_playing_record">Start playing this record</string>
    <string name="recording">Recording</string>
    <string name="select_receiver_or_group">Select at least one Receiver or Group first.</string>
    <string name="no_record_for_receiver">There is no record for selected receivers</string>
    <string name="group_deleted">Group deleted</string>
    <string name="undo">Undo</string>
    <string name="record_deleted">Record deleted</string>
    <string name="schedule_deleted">Schedule deleted</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="date_and_time">Date and time</string>
    <string name="repeating">Repeating</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="select_date">Select a date</string>
    <string name="set">Set</string>
    <string name="repeat_until">Repeat until</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="live_stream">Live Stream</string>
    <string name="tap_the_mic_to_start">Tap the MIC to start streaming.</string>
    <string name="push_to_talk">Push To Talk</string>
    <string name="touch_and_hold">Touch and hold while announcing.</string>
    <string name="security">SECURITY</string>
    <string name="app_locking">App Locking</string>
    <string name="back_to_settings">Back to settings</string>
    <string name="enable_app_locking">Enable App Locking</string>
    <string name="set_lock_pattern">Set Lock Pattern</string>
    <string name="enable_touch_id">Enable Touch ID</string>
    <string name="please_wait">Please wait until sending will finish</string>
    <string name="audio_sent">Audio sent</string>
    <string name="pa_list">PA systems list</string>
    <string name="announcements">Announcements</string>
    <string name="all_recordings">All recordings</string>
    <string name="schedules">Schedules</string>
    <string name="stop_recording">Please stop recording first</string>
    <string name="stop_streaming">Please stop streaming first</string>

</resources>
