<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.receivers.SelectPASystemActivity">

    <RelativeLayout
        android:id="@+id/add_group_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_edit_groupToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_pa"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/add_edit_group_toolbarTitle"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <Button
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_pa_cancelButton"
            android:textColor="@android:color/white"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:id="@+id/select_pa_saveButton"
            android:textColor="@android:color/white"
            android:text="@string/save"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <com.softrangers.sonarcloudmobile.utils.widgets.AnimatedExpandableListView
        android:id="@+id/select_pa_activityList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:groupIndicator="@android:color/transparent"
        android:layout_below="@+id/add_group_toolbar_layout"/>
</RelativeLayout>
