<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.fragments.ScheduleFragment">

    <RadioGroup
        android:id="@+id/schedule_list_selector"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/all_schedule_list_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_blue_borders"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/all"
            android:textColor="@drawable/text_color"/>

        <RadioButton
            android:id="@+id/scheduled_list_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_blue_borders"
            android:button="@null"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/scheduled"
            android:textColor="@drawable/text_color"/>
    </RadioGroup>

    <ProgressBar
        android:id="@+id/schedules_loadingProgress"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/schedule_list_selector"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <include
        layout="@layout/schedule_all_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/schedule_list_selector"/>

    <include
        layout="@layout/scheduled_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/schedule_list_selector"/>

    <TextView
        android:id="@+id/schedule_fragment_unselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="16sp"
        android:text="@string/select_receiver_or_group"
        android:textSize="20sp"/>
</RelativeLayout>
